src/components/grammar/antlr4/ANTLRv4Parser.ts
// Generated from ANTLRv4Parser.g4 by ANTLR 4.7.3-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { ANTLRv4ParserListener } from "./ANTLRv4ParserListener";
import { ANTLRv4ParserVisitor } from "./ANTLRv4ParserVisitor";


export class ANTLRv4Parser extends Parser {
	public static readonly TOKEN_REF = 1;
	public static readonly RULE_REF = 2;
	public static readonly LEXER_CHAR_SET = 3;
	public static readonly DOC_COMMENT = 4;
	public static readonly BLOCK_COMMENT = 5;
	public static readonly LINE_COMMENT = 6;
	public static readonly INT = 7;
	public static readonly STRING_LITERAL = 8;
	public static readonly UNTERMINATED_STRING_LITERAL = 9;
	public static readonly BEGIN_ARGUMENT = 10;
	public static readonly BEGIN_ACTION = 11;
	public static readonly OPTIONS = 12;
	public static readonly TOKENS = 13;
	public static readonly CHANNELS = 14;
	public static readonly IMPORT = 15;
	public static readonly FRAGMENT = 16;
	public static readonly LEXER = 17;
	public static readonly PARSER = 18;
	public static readonly GRAMMAR = 19;
	public static readonly PROTECTED = 20;
	public static readonly PUBLIC = 21;
	public static readonly PRIVATE = 22;
	public static readonly RETURNS = 23;
	public static readonly LOCALS = 24;
	public static readonly THROWS = 25;
	public static readonly CATCH = 26;
	public static readonly FINALLY = 27;
	public static readonly MODE = 28;
	public static readonly COLON = 29;
	public static readonly COLONCOLON = 30;
	public static readonly COMMA = 31;
	public static readonly SEMI = 32;
	public static readonly LPAREN = 33;
	public static readonly RPAREN = 34;
	public static readonly LBRACE = 35;
	public static readonly RBRACE = 36;
	public static readonly RARROW = 37;
	public static readonly LT = 38;
	public static readonly GT = 39;
	public static readonly ASSIGN = 40;
	public static readonly QUESTION = 41;
	public static readonly STAR = 42;
	public static readonly PLUS_ASSIGN = 43;
	public static readonly PLUS = 44;
	public static readonly OR = 45;
	public static readonly DOLLAR = 46;
	public static readonly RANGE = 47;
	public static readonly DOT = 48;
	public static readonly AT = 49;
	public static readonly POUND = 50;
	public static readonly NOT = 51;
	public static readonly ID = 52;
	public static readonly WS = 53;
	public static readonly ERRCHAR = 54;
	public static readonly END_ARGUMENT = 55;
	public static readonly UNTERMINATED_ARGUMENT = 56;
	public static readonly ARGUMENT_CONTENT = 57;
	public static readonly END_ACTION = 58;
	public static readonly UNTERMINATED_ACTION = 59;
	public static readonly ACTION_CONTENT = 60;
	public static readonly OPT_LBRACE = 61;
	public static readonly UNTERMINATED_CHAR_SET = 62;
	public static readonly RULE_grammarSpec = 0;
	public static readonly RULE_grammarDecl = 1;
	public static readonly RULE_grammarType = 2;
	public static readonly RULE_prequelConstruct = 3;
	public static readonly RULE_optionsSpec = 4;
	public static readonly RULE_option = 5;
	public static readonly RULE_optionValue = 6;
	public static readonly RULE_delegateGrammars = 7;
	public static readonly RULE_delegateGrammar = 8;
	public static readonly RULE_tokensSpec = 9;
	public static readonly RULE_channelsSpec = 10;
	public static readonly RULE_idList = 11;
	public static readonly RULE_action_ = 12;
	public static readonly RULE_actionScopeName = 13;
	public static readonly RULE_actionBlock = 14;
	public static readonly RULE_argActionBlock = 15;
	public static readonly RULE_modeSpec = 16;
	public static readonly RULE_rules = 17;
	public static readonly RULE_ruleSpec = 18;
	public static readonly RULE_parserRuleSpec = 19;
	public static readonly RULE_exceptionGroup = 20;
	public static readonly RULE_exceptionHandler = 21;
	public static readonly RULE_finallyClause = 22;
	public static readonly RULE_rulePrequel = 23;
	public static readonly RULE_ruleReturns = 24;
	public static readonly RULE_throwsSpec = 25;
	public static readonly RULE_localsSpec = 26;
	public static readonly RULE_ruleAction = 27;
	public static readonly RULE_ruleModifiers = 28;
	public static readonly RULE_ruleModifier = 29;
	public static readonly RULE_ruleBlock = 30;
	public static readonly RULE_ruleAltList = 31;
	public static readonly RULE_labeledAlt = 32;
	public static readonly RULE_lexerRuleSpec = 33;
	public static readonly RULE_lexerRuleBlock = 34;
	public static readonly RULE_lexerAltList = 35;
	public static readonly RULE_lexerAlt = 36;
	public static readonly RULE_lexerElements = 37;
	public static readonly RULE_lexerElement = 38;
	public static readonly RULE_labeledLexerElement = 39;
	public static readonly RULE_lexerBlock = 40;
	public static readonly RULE_lexerCommands = 41;
	public static readonly RULE_lexerCommand = 42;
	public static readonly RULE_lexerCommandName = 43;
	public static readonly RULE_lexerCommandExpr = 44;
	public static readonly RULE_altList = 45;
	public static readonly RULE_alternative = 46;
	public static readonly RULE_element = 47;
	public static readonly RULE_labeledElement = 48;
	public static readonly RULE_ebnf = 49;
	public static readonly RULE_blockSuffix = 50;
	public static readonly RULE_ebnfSuffix = 51;
	public static readonly RULE_lexerAtom = 52;
	public static readonly RULE_atom = 53;
	public static readonly RULE_notSet = 54;
	public static readonly RULE_blockSet = 55;
	public static readonly RULE_setElement = 56;
	public static readonly RULE_block = 57;
	public static readonly RULE_ruleref = 58;
	public static readonly RULE_characterRange = 59;
	public static readonly RULE_ending = 60;
	public static readonly RULE_elementOptions = 61;
	public static readonly RULE_elementOption = 62;
	public static readonly RULE_identifier = 63;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"grammarSpec", "grammarDecl", "grammarType", "prequelConstruct", "optionsSpec", 
		"option", "optionValue", "delegateGrammars", "delegateGrammar", "tokensSpec", 
		"channelsSpec", "idList", "action_", "actionScopeName", "actionBlock", 
		"argActionBlock", "modeSpec", "rules", "ruleSpec", "parserRuleSpec", "exceptionGroup", 
		"exceptionHandler", "finallyClause", "rulePrequel", "ruleReturns", "throwsSpec", 
		"localsSpec", "ruleAction", "ruleModifiers", "ruleModifier", "ruleBlock", 
		"ruleAltList", "labeledAlt", "lexerRuleSpec", "lexerRuleBlock", "lexerAltList", 
		"lexerAlt", "lexerElements", "lexerElement", "labeledLexerElement", "lexerBlock", 
		"lexerCommands", "lexerCommand", "lexerCommandName", "lexerCommandExpr", 
		"altList", "alternative", "element", "labeledElement", "ebnf", "blockSuffix", 
		"ebnfSuffix", "lexerAtom", "atom", "notSet", "blockSet", "setElement", 
		"block", "ruleref", "characterRange", "ending", "elementOptions", "elementOption", 
		"identifier",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, "'options'", "'tokens'", 
		"'channels'", "'import'", "'fragment'", "'lexer'", "'parser'", "'grammar'", 
		"'protected'", "'public'", "'private'", "'returns'", "'locals'", "'throws'", 
		"'catch'", "'finally'", "'mode'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "TOKEN_REF", "RULE_REF", "LEXER_CHAR_SET", "DOC_COMMENT", "BLOCK_COMMENT", 
		"LINE_COMMENT", "INT", "STRING_LITERAL", "UNTERMINATED_STRING_LITERAL", 
		"BEGIN_ARGUMENT", "BEGIN_ACTION", "OPTIONS", "TOKENS", "CHANNELS", "IMPORT", 
		"FRAGMENT", "LEXER", "PARSER", "GRAMMAR", "PROTECTED", "PUBLIC", "PRIVATE", 
		"RETURNS", "LOCALS", "THROWS", "CATCH", "FINALLY", "MODE", "COLON", "COLONCOLON", 
		"COMMA", "SEMI", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "RARROW", "LT", 
		"GT", "ASSIGN", "QUESTION", "STAR", "PLUS_ASSIGN", "PLUS", "OR", "DOLLAR", 
		"RANGE", "DOT", "AT", "POUND", "NOT", "ID", "WS", "ERRCHAR", "END_ARGUMENT", 
		"UNTERMINATED_ARGUMENT", "ARGUMENT_CONTENT", "END_ACTION", "UNTERMINATED_ACTION", 
		"ACTION_CONTENT", "OPT_LBRACE", "UNTERMINATED_CHAR_SET",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(ANTLRv4Parser._LITERAL_NAMES, ANTLRv4Parser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return ANTLRv4Parser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "ANTLRv4Parser.g4"; }

	// @Override
	public get ruleNames(): string[] { return ANTLRv4Parser.ruleNames; }

	// @Override
	public get serializedATN(): string { return ANTLRv4Parser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(ANTLRv4Parser._ATN, this);
	}
	// @RuleVersion(0)
	public grammarSpec(): GrammarSpecContext {
		let _localctx: GrammarSpecContext = new GrammarSpecContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, ANTLRv4Parser.RULE_grammarSpec);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 131;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ANTLRv4Parser.DOC_COMMENT) {
				{
				{
				this.state = 128;
				this.match(ANTLRv4Parser.DOC_COMMENT);
				}
				}
				this.state = 133;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 134;
			this.grammarDecl();
			this.state = 138;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ANTLRv4Parser.OPTIONS) | (1 << ANTLRv4Parser.TOKENS) | (1 << ANTLRv4Parser.CHANNELS) | (1 << ANTLRv4Parser.IMPORT))) !== 0) || _la === ANTLRv4Parser.AT) {
				{
				{
				this.state = 135;
				this.prequelConstruct();
				}
				}
				this.state = 140;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 141;
			this.rules();
			this.state = 145;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ANTLRv4Parser.MODE) {
				{
				{
				this.state = 142;
				this.modeSpec();
				}
				}
				this.state = 147;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 148;
			this.match(ANTLRv4Parser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public grammarDecl(): GrammarDeclContext {
		let _localctx: GrammarDeclContext = new GrammarDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, ANTLRv4Parser.RULE_grammarDecl);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 150;
			this.grammarType();
			this.state = 151;
			this.identifier();
			this.state = 152;
			this.match(ANTLRv4Parser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public grammarType(): GrammarTypeContext {
		let _localctx: GrammarTypeContext = new GrammarTypeContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, ANTLRv4Parser.RULE_grammarType);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 159;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case ANTLRv4Parser.LEXER:
				{
				this.state = 154;
				this.match(ANTLRv4Parser.LEXER);
				this.state = 155;
				this.match(ANTLRv4Parser.GRAMMAR);
				}
				break;
			case ANTLRv4Parser.PARSER:
				{
				this.state = 156;
				this.match(ANTLRv4Parser.PARSER);
				this.state = 157;
				this.match(ANTLRv4Parser.GRAMMAR);
				}
				break;
			case ANTLRv4Parser.GRAMMAR:
				{
				this.state = 158;
				this.match(ANTLRv4Parser.GRAMMAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public prequelConstruct(): PrequelConstructContext {
		let _localctx: PrequelConstructContext = new PrequelConstructContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, ANTLRv4Parser.RULE_prequelConstruct);
		try {
			this.state = 166;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case ANTLRv4Parser.OPTIONS:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 161;
				this.optionsSpec();
				}
				break;
			case ANTLRv4Parser.IMPORT:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 162;
				this.delegateGrammars();
				}
				break;
			case ANTLRv4Parser.TOKENS:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 163;
				this.tokensSpec();
				}
				break;
			case ANTLRv4Parser.CHANNELS:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 164;
				this.channelsSpec();
				}
				break;
			case ANTLRv4Parser.AT:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 165;
				this.action_();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public optionsSpec(): OptionsSpecContext {
		let _localctx: OptionsSpecContext = new OptionsSpecContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, ANTLRv4Parser.RULE_optionsSpec);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 168;
			this.match(ANTLRv4Parser.OPTIONS);
			this.state = 169;
			this.match(ANTLRv4Parser.LBRACE);
			this.state = 175;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ANTLRv4Parser.TOKEN_REF || _la === ANTLRv4Parser.RULE_REF) {
				{
				{
				this.state = 170;
				this.option();
				this.state = 171;
				this.match(ANTLRv4Parser.SEMI);
				}
				}
				this.state = 177;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 178;
			this.match(ANTLRv4Parser.RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public option(): OptionContext {
		let _localctx: OptionContext = new OptionContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, ANTLRv4Parser.RULE_option);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 180;
			this.identifier();
			this.state = 181;
			this.match(ANTLRv4Parser.ASSIGN);
			this.state = 182;
			this.optionValue();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public optionValue(): OptionValueContext {
		let _localctx: OptionValueContext = new OptionValueContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, ANTLRv4Parser.RULE_optionValue);
		let _la: number;
		try {
			this.state = 195;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case ANTLRv4Parser.TOKEN_REF:
			case ANTLRv4Parser.RULE_REF:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 184;
				this.identifier();
				this.state = 189;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === ANTLRv4Parser.DOT) {
					{
					{
					this.state = 185;
					this.match(ANTLRv4Parser.DOT);
					this.state = 186;
					this.identifier();
					}
					}
					this.state = 191;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				break;
			case ANTLRv4Parser.STRING_LITERAL:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 192;
				this.match(ANTLRv4Parser.STRING_LITERAL);
				}
				break;
			case ANTLRv4Parser.BEGIN_ACTION:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 193;
				this.actionBlock();
				}
				break;
			case ANTLRv4Parser.INT:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 194;
				this.match(ANTLRv4Parser.INT);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public delegateGrammars(): DelegateGrammarsContext {
		let _localctx: DelegateGrammarsContext = new DelegateGrammarsContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, ANTLRv4Parser.RULE_delegateGrammars);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 197;
			this.match(ANTLRv4Parser.IMPORT);
			this.state = 198;
			this.delegateGrammar();
			this.state = 203;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === ANTLRv4Parser.COMMA) {
				{
				{
				this.state = 199;
				this.match(ANTLRv4Parser.COMMA);
				this.state = 200;
				this.delegateGrammar();
				}
				}
				this.state = 205;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 206;
			this.match(ANTLRv4Parser.SEMI);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public delegateGrammar(): DelegateGrammarContext {
		let _localctx: DelegateGrammarContext = new DelegateGrammarContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, ANTLRv4Parser.RULE_delegateGrammar);
		try {
			this.state = 213;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 208;
				this.identifier();
				this.state = 209;
				this.match(ANTLRv4Parser.ASSIGN);
				this.state = 210;
				this.identifier();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 212;
				this.identifier();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public tokensSpec(): TokensSpecContext {
		let _localctx: TokensSpecContext = new TokensSpecContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, ANTLRv4Parser.RULE_tokensSpec);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 215;
			this.match(ANTLRv4Parser.TOKENS);
			this.state = 216;
			this.match(ANTLRv4Parser.LBRACE);
			this.state = 218;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === ANTLRv4Parser.TOKEN_REF || _la === ANTLRv4Parser.RULE_REF) {
				{
				this.state = 217;
				this.idList();
				}
			}

			this.state = 220;
			this.match(ANTLRv4Parser.RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public channelsSpec(): ChannelsSpecContext {
		let _localctx: ChannelsSpecContext = new ChannelsSpecContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, ANTLRv4Parser.RULE_channelsSpec);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 222;
			this.match(ANTLRv4Parser.CHANNELS);
			this.state = 223;
			this.match(ANTLRv4Parser.LBRACE);
			this.state = 225;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === ANTLRv4Parser.TOKEN_REF || _la === ANTLRv4Parser.RULE_REF) {
				{
				this.state = 224;
				this.idList();
				}
			}
